[package]
name = "rock_paper_scissors"
version = "0.1.0"
authors = ["Afront <3943720+Afront@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.16.0"
quinn = "0.5.3"
rand = "0.7.3"
read_input = "0.8.4"
tui = { version = "0.8", default-features = false, features = ['crossterm']}