[package]
name = "rock_paper_scissors"
version = "0.1.0"
authors = ["Afront <3943720+Afront@users.noreply.github.com>"]
edition = "2018"
build = "build.rs"

[package.metadata.winres]
OriginalFilename = "ROCK_PAPER_SCISSORS.EXE"
LegalCopyright = "Copyright © 2020"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.11"


[dependencies]
neutrino = "0.3.1"
rand = "0.7.3"
read_input = "0.8.4"

